syntax = "proto3";

import "google/protobuf/empty.proto";
package com.usergrpcservice.service;

option java_multiple_files = true;
option java_package = "com.usergrpcservice.grpc";
option java_outer_classname = "UserServiceProto";

service UserService {
  // client-to-server RPC to create new user
  rpc addUser(AddUserRequest) returns (UserResponse) {}

  // client-to-server RPC to update already exist user
  rpc updateUser(UpdateUserRequest) returns (UserResponse) {}

  // client-to-server RPC to delete already exist user
  rpc deleteUser(DeleteRequest) returns (google.protobuf.Empty) {}

  // client-to-server RPC to search users
  rpc listUsers(SearchRequest) returns (SearchResponse) {}
}

message AddUserRequest {
  string first_name = 1;
  string last_name = 2;
  string nickname = 3;
  string password = 4;
  string email = 5;
  string country = 6;
}

message UserResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string nickname = 4;
  string email = 5;
  string country = 6;
  string created_at = 7;
  string updated_at = 8;
}

message UpdateUserRequest {
  string id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string nickname = 4;
  optional string password = 5;
  optional string email = 6;
  optional string country = 7;
}

message DeleteRequest {
  string id = 1;
}

message SearchRequest {
  optional string query = 1;
  optional int32 page_number = 2;
  optional int32 result_per_page = 3;
}

message SearchResponse {
  int32 total_pages = 1;
  int32 page_number = 2;
  int32 total_result = 3;
  repeated UserResponse content = 4;
}

enum EnumCountry {
  UK = 0;
  PL = 1;
}